Clean up legacy code and fix compilation errors
- Removed unused `Display` and `Sys` imports.
- Replaced `JSObject` usage with standard desktop methods or removed where not applicable.
- Added `DummyFont` to `GLUtils` to allow compilation (text rendering is a placeholder).
- Fixed `AudioChannel` constructors.
- Replaced `AL.destroy()` with `AudioUtils.destroy()`.
- Implemented `GameSave.getCountryStringFromCode`.
- Modernized `LWJGLUtils` and `ControlsPanel` to use GLFW input.
- Updated `build.gradle` to Java 21.
- Ensured successful build with `./gradlew clean build`.